Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType28.out
TargetType28.java:20:32: compiler.err.prob.found.req: (compiler.misc.incompatible.bounds: X, (compiler.misc.eq.bounds: java.lang.String), (compiler.misc.upper.bounds: java.lang.Object,java.lang.Number))
1 error
